plugins {
  id 'eclipse'
  id 'idea'
  id 'maven-publish'
  id 'net.minecraftforge.gradle' version '[6.0,6.2)'
  id 'org.spongepowered.mixin' version '0.7.+'
}

version = project.property('forgehax.version')
group = 'com.matt.forgehax'

base {
  archivesName = "forgehax-${project.property('minecraft.version')}"
}

java {
  toolchain.languageVersion = JavaLanguageVersion.of(17)
}

mixin {
  add sourceSets.main, 'forgehax.refmap.json'
  config 'forgehax.mixins.json'
}

// 1.20.1 migration: only the core module set is compiled while the port lands.
// Excluded files stay on disk; drop a name back into coreMods to re-enable it.
def coreMods = [
    'ActiveModList', 'Aimbot', 'AutoReconnectMod', 'AutoSprintMod', 'AutoTool',
    'ChamsMod', 'CoordsHud', 'Criticals', 'ESP', 'FlyMod', 'FreecamMod',
    'FullBrightMod', 'ItemESP', 'Jesus', 'KillAura', 'NoFallMod', 'NoSlowdown',
    'NoclipMod', 'Nuker', 'SafeWalkMod', 'Scaffold', 'StepMod', 'StorageESPMod',
    'Targets', 'TimerMod', 'Tracers', 'XrayMod'
]

sourceSets.main.java {
  exclude 'com/matt/forgehax/asm/patches/**'
  exclude 'com/matt/forgehax/asm/utils/transforming/**'
  exclude 'com/matt/forgehax/asm/reflection/**'
  // Schematica (com.github.lunatrius.schematica) has no 1.20.1 release, so nothing can
  // resolve against it; the modules that used it are excluded below anyway.
  exclude 'com/matt/forgehax/util/schematica/**'
  exclude { el ->
    def prefix = 'com/matt/forgehax/mods/'
    def path = el.path
    el.file.isFile() && path.startsWith(prefix) &&
        !path.substring(prefix.length()).contains('/') &&
        !coreMods.contains(el.file.name - '.java')
  }
}

minecraft {
  mappings channel: 'official', version: project.property('minecraft.version')

  runs {
    configureEach {
      workingDirectory project.file('run')
      property 'forge.logging.markers', 'REGISTRIES'
      property 'forge.logging.console.level', 'debug'

      mods {
        forgehax {
          source sourceSets.main
        }
      }
    }

    client {}
  }
}

repositories {
  mavenCentral()
}

dependencies {
  minecraft "net.minecraftforge:forge:${project.property('minecraft.version')}-${project.property('forge.version')}"

  // Mixin's annotation processor generates forgehax.refmap.json; without it the mixin
  // configs resolve nothing under production (SRG) names.
  annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

  testImplementation 'junit:junit:4.13.2'
  testImplementation 'org.mockito:mockito-core:5.14.2'
}

tasks.named('processResources', ProcessResources).configure {
  def replaceProperties = [
      mod_id                 : 'forgehax',
      mod_name               : 'ForgeHax',
      mod_version            : project.version,
      mod_license            : 'MIT',
      mod_authors            : 'fr1kin, Babbaj, Chunkr',
      mod_description        : 'Hax 4 Forge',
      forgehax_version       : project.version,
      forgehax_mc_version    : project.property('minecraft.version'),
      forgehax_forge_version : project.property('forge.version'),
      forgehax_mcp_version   : project.property('minecraft.version'),
      forgehax_mcp_channel   : 'official',
      forgehax_mcp_mapping   : project.property('minecraft.version'),
      forge_version_range    : project.property('forge.version.range'),
      loader_version_range   : project.property('loader.version.range'),
      minecraft_version_range: project.property('minecraft.version.range')
  ]

  inputs.properties replaceProperties
  filesMatching(['META-INF/mods.toml', 'pack.mcmeta', 'config.properties']) {
    expand replaceProperties + [project: project]
  }
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  options.compilerArgs << '-Xmaxerrs' << '5000'
}

jar {
  manifest {
    attributes([
        'Specification-Title'     : 'ForgeHax',
        'Specification-Vendor'    : 'ForgeHax',
        'Specification-Version'   : '1',
        'Implementation-Title'    : project.name,
        'Implementation-Version'  : project.jar.archiveVersion,
        'Implementation-Vendor'   : 'ForgeHax',
        'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
    ])
  }
}

jar.finalizedBy('reobfJar')
